--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -12,6 +12,17 @@ body {
     height: 400px;
     background-color: #45B26F;
 }
+#upper-header article{
+    margin: 0; padding: 0;
+    height: 50px;
+    display: flex;
+    width: 100%;
+    justify-content: center;
+}
+#upper-header article img{
+    height: 50px;
+    margin: 0px 50px;
+}
 
 header {
     height: 60px;
