--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,162 +1,175 @@
 * {
-    margin: 0;
-    padding: 0;
-    font-family: 'Montserrat', sans-serif;
+  margin: 0;
+  padding: 0;
+  font-family: "Montserrat", sans-serif;
 }
 
 body {
-    background-color: #f4f4f4;
+  background-color: #f4f4f4;
 }
 
 #upper-header {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
-    height: 400px;
-    background-color: #45B26F;
-}
-#chats{
-    display: flex;
-    width: 100%;
-    height: 100%;
-}
-#left-chat{
-    display: flex;
-    flex-wrap: wrap;
-    width: 372px;
-    height: 100%;
-}
-#upper-header article{
-    margin: 0; padding: 0;
-    height: 50px;
-    display: flex;
-    width: 100%;
-    justify-content: center;
-}
-#upper-header article img{
-    height: 50px;
-    margin: 0px 50px;
+  display: flex;
+  width: 100%;
+  flex-direction: column;
+  height: 100vh;
+  background-color: #45b26f;
 }
 
-.baloes-left-chat, .baloes-right-chat{
-    display: flex;
-    flex-direction: column;
+#upper-header article {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
 }
-.baloes-left-chat{
-    width: 372px;
+#chats {
+  display: flex;
+  width: 100%;
+  height: 100%;
 }
-.balao-left img, .balao-right img{
-    min-height: 70px;
+#left-chat,
+#right-chat {
+  display: flex;
+  max-width: 300px;
+  flex-wrap: wrap;
+  width: 372px;
+  height: 100%;
 }
-.user-chat{
-    min-height: 50px;
-    width: 100%;
-}.user-chat img{
-    display: flex;
-    text-align: left;
-    width: 50px;
+
+#right-chat {
+  margin-top: 100px;
 }
+
+.user-img {
+  margin: 60px 10px 0 0;
+}
+
+#upper-header article img {
+  height: 90px;
+  /* margin: 0px 50px; */
+}
+.baloes-left-chat,
+.baloes-right-chat {
+  width: 100%;
+  display: flex;
+  justify-content: space-around;
+}
+
+/* 
+.baloes-left-chat,
+.baloes-right-chat {
+  width: 100%;
+  align-items: flex-start;
+  display: flex;
+  flex-direction: column;
+} */
+.balao-left img,
+.balao-right img {
+  min-height: 70px;
+}
+
 header {
-    height: 60px;
-    width: 100%;
-    box-shadow: 5px 1px 15px #888888;
-    background-color: #F3F3F3;
-    border-radius: 0px 0px 20px 20px;
-    position: sticky;
-    top: 0;
+  height: 60px;
+  width: 100%;
+  box-shadow: 5px 1px 15px #888888;
+  background-color: #f3f3f3;
+  border-radius: 0px 0px 20px 20px;
+  position: sticky;
+  top: 0;
 }
 
 header nav ul {
-    display: flex;
-    width: 100%;
-    height: 60px;
-    justify-content: center;
-    align-items: center;
-    list-style: none;
+  display: flex;
+  width: 100%;
+  height: 60px;
+  justify-content: center;
+  align-items: center;
+  list-style: none;
 }
 
 li {
-    width: 200px;
-    text-align: center;
+  width: 200px;
+  text-align: center;
 }
 
-.btn-p{
-    background-color: red;
-    color: white;
-    padding: 5px;
-    border-radius: 10px;
-    text-decoration: dashed;
+.btn-p {
+  background-color: red;
+  color: white;
+  padding: 5px;
+  border-radius: 10px;
+  text-decoration: dashed;
 }
-.btn-p:hover{
-    color: black;
-    transition: 0.3s;
+.btn-p:hover {
+  color: black;
+  transition: 0.3s;
 }
 
 nav ul li a {
-    text-decoration: none;
-    font-weight: bold;
-    color: #000;
-    display: flex;
-    width: 200px;
-    justify-content: center;
+  text-decoration: none;
+  font-weight: bold;
+  color: #000;
+  display: flex;
+  width: 200px;
+  justify-content: center;
 }
-article{
-    margin: 15px;
+article {
+  margin: 15px;
 }
-h1{
-    color: #3C8F5D;
+h1 {
+  color: #3c8f5d;
 }
-p{
-    margin: 20px;
-    text-align: left;
+p {
+  margin: 20px;
+  text-align: left;
 }
-.links{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    justify-content: center;
+.links {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
+  justify-content: center;
 }
-.list-links{ /* CORRIGIR MARGENS */
-    list-style: none;
+.list-links {
+  /* CORRIGIR MARGENS */
+  list-style: none;
 }
-.nosso{
-    padding: 10px;
+.nosso {
+  padding: 10px;
 }
-.line{
-    padding: 1px 30px;
-    background-color: #002841;
-    margin-top: 15px;
-    width: 95%;
+.line {
+  padding: 1px 30px;
+  background-color: #002841;
+  margin-top: 15px;
+  width: 95%;
 }
-h2{
-    color: #002841;
+h2 {
+  color: #002841;
 }
-.flex-l, .flex-r{
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
+.flex-l,
+.flex-r {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: wrap;
 }
-.flex-l p{
-    width: 60%;
+.flex-l p {
+  width: 60%;
 }
-.flex-r{
-    width: 100%;
+.flex-r {
+  width: 100%;
 }
-.item{
-    width: 400px;
-    margin: 0 5% 0 5%;
-    margin-bottom: 20px;
+.item {
+  width: 400px;
+  margin: 0 5% 0 5%;
+  margin-bottom: 20px;
 }
-.prof{
-    background-color: #002841;
-    padding: 5px;
+.prof {
+  background-color: #002841;
+  padding: 5px;
 }
-.line-green{
-    padding: 1px 30px;
-    background-color: #98FFA8;
-    margin-top: 15px;
-    width: 95%;
+.line-green {
+  padding: 1px 30px;
+  background-color: #98ffa8;
+  margin-top: 15px;
+  width: 95%;
 }
-.w{
-    color: white;
+.w {
+  color: white;
 }
