--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -2,17 +2,18 @@
   margin: 0;
   padding: 0;
   font-family: "Montserrat", sans-serif;
+  overflow-x: hidden;
 }
 
 body {
-  background-color: #f4f4f4;
+  background-color: #002841;
 }
 
-#upper-header {
+/*#upper-header {
   display: flex;
   width: 100%;
   flex-direction: column;
-  height: 100vh;
+  height: 700px;
   background-color: #45b26f;
 }
 
@@ -25,6 +26,9 @@ body {
   display: flex;
   width: 100%;
   height: 100%;
+}
+#chats img{
+  height: 70px;
 }
 #left-chat,
 #right-chat {
@@ -43,9 +47,8 @@ body {
   margin: 60px 10px 0 0;
 }
 
-#upper-header article img {
+#logos {
   height: 90px;
-  /* margin: 0px 50px; */
 }
 .baloes-left-chat,
 .baloes-right-chat {
@@ -53,27 +56,31 @@ body {
   display: flex;
   justify-content: space-around;
 }
-
-/* 
-.baloes-left-chat,
-.baloes-right-chat {
-  width: 100%;
-  align-items: flex-start;
-  display: flex;
-  flex-direction: column;
-} */
 .balao-left img,
 .balao-right img {
   min-height: 70px;
 }
+#bonequinho-container{
+  display: flex;
+  align-items: flex-end;
+  height: 580px;
+  margin-left: 40px;
+}
+#bonequinho{
+  background-image: url(../images/bonequinho.png);
+  background-size: cover;
+  width: 387px;
+  height: 327px;
+  align-items: flex-end;
+}*/
 
 header {
   height: 60px;
   width: 100%;
-  box-shadow: 5px 1px 15px #888888;
+  box-shadow: 5px -10px 30px #000;
   background-color: #f3f3f3;
   border-radius: 0px 0px 20px 20px;
-  position: sticky;
+  position: fixed;
   top: 0;
 }
 
@@ -94,7 +101,6 @@ li {
 .btn-p {
   background-color: red;
   color: white;
-  padding: 5px;
   border-radius: 10px;
   text-decoration: dashed;
 }
@@ -111,28 +117,57 @@ nav ul li a {
   width: 200px;
   justify-content: center;
 }
-article {
-  margin: 15px;
+main{
+  margin-top: 60px;
 }
-h1 {
-  color: #3c8f5d;
+h2 {
+  color: #3C8F5D;
+  font-size: 40px;
+  height: 60px;
+  display: flex;
+  align-items: center;
 }
-p {
-  margin: 20px;
-  text-align: left;
+#inicio{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  min-height: 450px;
+}
+#inicio-content{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  color: #fff;
+  min-height: 300px;
+  max-height: 100%;
+}
+.inicio-text{
+  max-width: 1100px;
+  margin: 30px;
+  text-align: center;
 }
 .links {
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  justify-content: center;
+  justify-content: space-around;
+  height: 200px;
 }
-.list-links {
-  /* CORRIGIR MARGENS */
-  list-style: none;
+.alunos, .professores{
+  color: #f4f4f4;
+  text-align: center;
+}
+.list-links li a {
+  color: #f4f4f4;
 }
 .nosso {
-  padding: 10px;
+  background-color: #f4f4f4;
+  min-height: 800px;
+}
+.nosso article h2{
+  color: #002841;
 }
 .line {
   padding: 1px 30px;
@@ -140,8 +175,12 @@ p {
   margin-top: 15px;
   width: 95%;
 }
-h2 {
-  color: #002841;
+.nosso-projeto1{
+  display: flex;
+  width: 100%;
+}
+.nosso-projeto-1 div img{
+  width: 100px;
 }
 .flex-l,
 .flex-r {
@@ -172,4 +211,21 @@ h2 {
 }
 .w {
   color: white;
+}
+
+@media(max-width: 1100px){
+  #bonequinho-container{
+    display: none;
+  }
+  #logos img{
+    height: 60px;
+  }
+}
+@media(max-width: 700px){
+  #chats img{
+    height: 50px;
+  }
+  #logos img{
+    height: 50px;
+  }
 }
