--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -6,7 +6,7 @@
 }
 
 body {
-  background-color: #002841;
+  background-color: #f4f4f4;
 }
 
 /*#upper-header {
@@ -165,6 +165,7 @@ h2 {
 .nosso {
   background-color: #f4f4f4;
   min-height: 800px;
+  margin: 50px;
 }
 .nosso article h2{
   color: #002841;
@@ -175,12 +176,23 @@ h2 {
   margin-top: 15px;
   width: 95%;
 }
-.nosso-projeto1{
+.nosso-projeto-1{
   display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  font-size: 20px;
   width: 100%;
+  height: 450;
 }
-.nosso-projeto-1 div img{
-  width: 100px;
+.nosso-projeto-texto1{
+  max-width: 900px;
+}
+.nosso-projeto-imagem1{
+  background-image: url('../images/nosso-projeto-imagem1.png');
+  width: 410px;
+  height: 339px;
+  background-size: cover;
 }
 .flex-l,
 .flex-r {
