--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -3,76 +3,13 @@
   padding: 0;
   font-family: "Montserrat", sans-serif;
   overflow-x: hidden;
+  scroll-behavior: smooth;
 }
 
 body {
   background-color: #f4f4f4;
+  scroll-behavior: smooth;
 }
-
-/*#upper-header {
-  display: flex;
-  width: 100%;
-  flex-direction: column;
-  height: 700px;
-  background-color: #45b26f;
-}
-
-#upper-header article {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-#chats {
-  display: flex;
-  width: 100%;
-  height: 100%;
-}
-#chats img{
-  height: 70px;
-}
-#left-chat,
-#right-chat {
-  display: flex;
-  max-width: 300px;
-  flex-wrap: wrap;
-  width: 372px;
-  height: 100%;
-}
-
-#right-chat {
-  margin-top: 100px;
-}
-
-.user-img {
-  margin: 60px 10px 0 0;
-}
-
-#logos {
-  height: 90px;
-}
-.baloes-left-chat,
-.baloes-right-chat {
-  width: 100%;
-  display: flex;
-  justify-content: space-around;
-}
-.balao-left img,
-.balao-right img {
-  min-height: 70px;
-}
-#bonequinho-container{
-  display: flex;
-  align-items: flex-end;
-  height: 580px;
-  margin-left: 40px;
-}
-#bonequinho{
-  background-image: url(../images/bonequinho.png);
-  background-size: cover;
-  width: 387px;
-  height: 327px;
-  align-items: flex-end;
-}*/
 
 header {
   height: 60px;
@@ -127,11 +64,13 @@ h2 {
   display: flex;
   align-items: center;
 }
-#inicio{
+#mapa{
   display: flex;
   flex-direction: column;
   justify-content: space-around;
   min-height: 450px;
+  background-color: #002841;
+  font-size: 20px;
 }
 #inicio-content{
   display: flex;
@@ -150,24 +89,36 @@ h2 {
 }
 .links {
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-  justify-content: space-around;
-  height: 200px;
+  justify-content: center;
+  width: 100%;
 }
 .alunos, .professores{
   color: #f4f4f4;
+  display: flex;
   text-align: center;
+  align-items: center;
+  flex-direction: column;
+  width: 50%;
+  margin: 40px 0px;
 }
-.list-links li a {
+.list-links li a, .list-links li{
   color: #f4f4f4;
+  width: 100%;
 }
-.nosso {
+.list-links{
+  width: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+#nosso-projeto {
   background-color: #f4f4f4;
-  min-height: 800px;
-  margin: 50px;
+  min-height: 700px;
+  margin: 2%;
+  font-size: 20px;
 }
-.nosso article h2{
+#nosso-projeto article h2{
   color: #002841;
 }
 .line {
@@ -181,37 +132,89 @@ h2 {
   flex-wrap: wrap;
   justify-content: space-evenly;
   align-items: center;
-  font-size: 20px;
+  width: 100%;
+  height: 450;
+}
+.nosso-projeto-2{
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: space-evenly;
+  align-items: center;
   width: 100%;
   height: 450;
 }
 .nosso-projeto-texto1{
-  max-width: 900px;
+  max-width: 820px;
+  text-align: justify;
+}
+.nosso-projeto-texto2{
+  max-width: 400px;
+  text-align: justify;
 }
 .nosso-projeto-imagem1{
-  background-image: url('../images/nosso-projeto-imagem1.png');
-  width: 410px;
-  height: 339px;
+  background-image: url('../images/garoto-notebook.png');
+  width: 307.5px;
+  height: 254.25px;
+  background-size: cover;
+  margin: 20px;
+}
+.nosso-projeto-imagem2{
+  background-image: url('../images/calculadora.jpg');
+  width: 150px;
+  height: 150px;
   background-size: cover;
 }
-.flex-l,
-.flex-r {
+.nosso-projeto-imagem3{
+  
+  background-image: url('../images/atomo.png');
+  width: 200px;
+  height: 200px;
+  background-size: cover;
+}
+#polos h2{
+  height: 100%;
+  margin: 20px;
+  text-align: center;
+}
+.container-polos{
   display: flex;
-  flex-direction: row;
   flex-wrap: wrap;
-}
-.flex-l p {
-  width: 60%;
-}
-.flex-r {
+  min-height: 450px;
+  align-items: center;
+  justify-content: space-evenly;
   width: 100%;
 }
-.item {
-  width: 400px;
-  margin: 0 5% 0 5%;
-  margin-bottom: 20px;
+.card-polos{
+  background-color: #45B26F;
+  height: 450px;
+  width: 450px;
+  border-radius: 50%;
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+  justify-content: flex-start;
+  text-align: center;
+  margin: 20px;
 }
-.prof {
+.titulo-card-polos{
+  display: flex;
+  align-items: center;
+  height: 180px;
+  font-size: 30px;
+  font-weight: bold;
+}
+.polos-content{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.texto-polos{
+  display: flex;
+  max-width: 80%;
+  text-align: justify;
+  font-size: 25px;
+}
+#professores {
   background-color: #002841;
   padding: 5px;
 }
@@ -239,5 +242,18 @@ h2 {
   }
   #logos img{
     height: 50px;
+  }
+  .card-polos{
+    width: 260px;
+    height: 260px;
+    font-size: 19px;
+    margin: 10% 0px;
+  }
+  .titulo-card-polos{
+    height: 100px;
+  }
+  .links{
+    align-items: center;
+    flex-direction: column;
   }
 }
