--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -41,6 +41,7 @@ li {
   border-radius: 10px;
   text-decoration: dashed;
 }
+
 .btn-p:hover {
   color: black;
   transition: 0.3s;
@@ -54,9 +55,11 @@ nav ul li a {
   width: 200px;
   justify-content: center;
 }
-main{
+
+main {
   margin-top: 60px;
 }
+
 h2 {
   color: #3C8F5D;
   font-size: 40px;
@@ -64,7 +67,8 @@ h2 {
   display: flex;
   align-items: center;
 }
-#mapa{
+
+#mapa {
   display: flex;
   flex-direction: column;
   justify-content: space-around;
@@ -72,7 +76,8 @@ h2 {
   background-color: #002841;
   font-size: 20px;
 }
-#inicio-content{
+
+#inicio-content {
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -82,18 +87,22 @@ h2 {
   min-height: 300px;
   max-height: 100%;
 }
-.inicio-text{
+
+.inicio-text {
   max-width: 1100px;
   margin: 30px;
   text-align: center;
 }
+
 .links {
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
   width: 100%;
 }
-.alunos, .professores{
+
+.alunos,
+.professores {
   color: #f4f4f4;
   display: flex;
   text-align: center;
@@ -102,32 +111,39 @@ h2 {
   width: 50%;
   margin: 40px 0px;
 }
-.list-links li a, .list-links li{
+
+.list-links li a,
+.list-links li {
   color: #f4f4f4;
   width: 100%;
 }
-.list-links{
+
+.list-links {
   width: 50%;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
 #nosso-projeto {
   background-color: #f4f4f4;
   min-height: 700px;
   padding: 2%;
   font-size: 20px;
 }
-#nosso-projeto article h2{
+
+#nosso-projeto article h2 {
   color: #002841;
 }
+
 .line {
   padding: 1px 30px;
   background-color: #002841;
   margin-top: 15px;
   width: 95%;
 }
-.nosso-projeto-1{
+
+.nosso-projeto-1 {
   display: flex;
   flex-wrap: wrap;
   justify-content: space-evenly;
@@ -135,7 +151,8 @@ h2 {
   width: 100%;
   height: 450;
 }
-.nosso-projeto-2{
+
+.nosso-projeto-2 {
   display: flex;
   flex-wrap: wrap-reverse;
   justify-content: space-evenly;
@@ -143,40 +160,47 @@ h2 {
   width: 100%;
   height: 450;
 }
-.nosso-projeto-texto1{
+
+.nosso-projeto-texto1 {
   max-width: 820px;
   text-align: justify;
 }
-.nosso-projeto-texto2{
+
+.nosso-projeto-texto2 {
   max-width: 400px;
   text-align: justify;
 }
-.nosso-projeto-imagem1{
+
+.nosso-projeto-imagem1 {
   background-image: url('../images/garoto-notebook.png');
   width: 307.5px;
   height: 254.25px;
   background-size: cover;
   margin: 20px;
 }
-.nosso-projeto-imagem2{
+
+.nosso-projeto-imagem2 {
   background-image: url('../images/calculadora.jpg');
   width: 150px;
   height: 150px;
   background-size: cover;
 }
-.nosso-projeto-imagem3{
-  
+
+.nosso-projeto-imagem3 {
+
   background-image: url('../images/atomo.png');
   width: 200px;
   height: 200px;
   background-size: cover;
 }
-#polos h2{
+
+#polos h2 {
   height: 100%;
   margin: 20px;
   text-align: center;
 }
-.container-polos{
+
+.container-polos {
   display: flex;
   flex-wrap: wrap;
   min-height: 450px;
@@ -184,7 +208,8 @@ h2 {
   justify-content: space-evenly;
   width: 100%;
 }
-.card-polos{
+
+.card-polos {
   background-color: #45B26F;
   height: 450px;
   width: 450px;
@@ -196,27 +221,34 @@ h2 {
   text-align: center;
   margin: 20px;
 }
-.titulo-card-polos{
+
+.titulo-card-polos {
   display: flex;
   align-items: center;
   height: 180px;
   font-size: 30px;
   font-weight: bold;
 }
-.polos-content{
+
+.polos-content {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
-.texto-polos{
+
+.texto-polos {
   display: flex;
   max-width: 80%;
   text-align: justify;
   font-size: 25px;
 }
+
 #professores {
   background-color: #002841;
-  padding: 5px;
+  padding: 2%;
+}
+h1{
+  font-size: 40px;
 }
 .line-green {
   padding: 1px 30px;
@@ -224,100 +256,142 @@ h2 {
   margin-top: 15px;
   width: 95%;
 }
+
+.cont-professores {
+  height: 100%;
+}
+
 .w {
   color: white;
 }
 
-@media(max-width: 1100px){
-  #bonequinho-container{
+.item {
+  width: 500px;
+  margin: 30px;
+}
+
+.titulo-green {
+  color: #98ffa8;
+}
+
+.cont-professores {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  flex-wrap: wrap;
+  margin-top: 30px;
+}
+
+.prof-content img {
+  margin-left: 20%;
+}
+
+.prof-content {
+  justify-content: space-around;
+  align-items: center;
+  display: flex;
+  flex-wrap: wrap;
+  height: 100%;
+  text-align: justify;
+  font-size: 20px;
+}
+
+.item-center{
+  display: flex;
+  flex-direction: column;
+  width: 500px;
+  color: #fff;
+  height: 100%;
+  justify-content: center;
+  align-items: center;
+  margin: 30px;
+}
+
+.btn-p-main {
+  display: flex;
+  width: 200px;
+  height: 30px;
+  margin: 10px 0;
+  justify-content: center;
+  align-items: center;
+  background-color: red;
+  color: white;
+  text-decoration: dashed;
+  border-radius: 20px 20px 0 20px;
+
+}
+
+/* Parte do quem somos */
+#quemsomos {
+  background-color: white;
+  margin-top: 30px;
+  padding: 2%;
+}
+
+.blue {
+  color: #002841;
+}
+
+.item p {
+  margin: 30px;
+}
+
+.image-logo {
+  margin: 30px;
+}
+
+/* mentores */
+.mentores {
+  margin: 30px;
+}
+
+/* nossa cara */
+.sobrenos {
+  display: flex;
+}
+
+.sobrenos img {
+  height: 300px;
+}
+
+@media(max-width: 1100px) {
+  #bonequinho-container {
     display: none;
   }
-  #logos img{
+
+  #logos img {
     height: 60px;
   }
 }
-@media(max-width: 700px){
-  #chats img{
+
+@media(max-width: 700px) {
+  #chats img {
     height: 50px;
   }
-  #logos img{
+
+  #logos img {
     height: 50px;
   }
-  .card-polos{
+
+  .card-polos {
     width: 260px;
     height: 260px;
     font-size: 19px;
     margin: 10% 0px;
   }
-  .titulo-card-polos{
+
+  .titulo-card-polos {
     height: 100px;
   }
-  .links{
+
+  .links {
     align-items: center;
     flex-direction: column;
   }
-}
-
-.item{
-  width: 600px;
-}
-
-.titulo-green{
-  color: #98ffa8;
-  font-size: 40px;
-}
-.cont-professores{
- display: flex;
- flex-direction: row;
- justify-content: center;
- flex-wrap: wrap;
- margin-top: 30px;
-}
-.cont-professores img{
-  margin-left: 30%;
-}
-
-.prof-content{
-  justify-content: center;
-  align-items: center;
-}
-.item-left{
-  color: white;
-  margin: 30px;
-  width: 500px;
-}
-.btn-p-main{
-  padding: 10px;
-  margin-left: 30px;
-  background-color: red;
-  color:  white;
-  text-decoration: dashed;
-  border-radius: 20px 20px 0 20px;
-
-}
-/* Parte do quem somos */
-#quemsomos{
-  background-color: white;
-  margin-top: 30px;
-}
-
-.blue{
-  color: #002841;
-}
-.item p{
-  margin: 30px;
-}
-.image-logo{
-  margin: 30px;
-}
-/* mentores */
-.mentores{
-  margin: 30px;
-}
-/* nossa cara */
-.sobrenos{
-  display: flex;
-}
-.sobrenos img{
-  height: 300px;
+  .item {
+    width: 300px;
+  }
+  .item-center{
+    width: 300px;
+  }
 }
