--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -11,12 +11,48 @@ body {
   scroll-behavior: smooth;
 }
 
+.upper-header{
+  position: fixed;
+  background-color: #f4f4f4;
+  min-height: 60px;
+  width: 100vw;
+  z-index: 2;
+  display: flex;
+  justify-content: space-between;
+}
+.left-upper{
+  background-image: url('../images/logoPreparetec.png');
+  background-size: cover;
+  width: 395px;
+  height: 55px;
+  margin: 0px 20px;
+}
+.right-upper{
+  display: flex;
+  min-width: 17%;
+  justify-content: space-between;
+  margin: 0 30px;
+}
+.logo-dem{
+  background-image: url('../images/logoDEM.png');
+  background-size: cover;
+  width: 145px;
+  height: 55px;
+}
+.logo-prefeitura{
+  background-image: url('../images/logoPrefeituraMongagua.png');
+  background-size: cover;
+  width: 60px;
+  height: 55px;
+}
+
 header {
   height: 60px;
   width: 100%;
   box-shadow: 5px -10px 30px #000;
   background-color: #f3f3f3;
   border-radius: 0px 0px 20px 20px;
+  margin-top: 60px;
   position: fixed;
   top: 0;
 }
@@ -37,7 +73,11 @@ li {
 
 .btn-p {
   background-color: red;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   color: white;
+  height: 30px;
   border-radius: 10px;
   text-decoration: dashed;
 }
@@ -57,7 +97,7 @@ nav ul li a {
 }
 
 main {
-  margin-top: 60px;
+  margin-top: 120px;
 }
 
 h2 {
@@ -75,6 +115,9 @@ h2 {
   min-height: 450px;
   background-color: #002841;
   font-size: 20px;
+  background-image: url('../images/sala-de-aula.jpg');
+  background-position: ;
+  background-size: cover;
 }
 
 #inicio-content {
@@ -267,7 +310,7 @@ h1{
 
 .item {
   width: 500px;
-  margin: 30px;
+  margin: 10px;
 }
 
 .titulo-green {
@@ -284,6 +327,8 @@ h1{
 
 .prof-content img {
   margin-left: 20%;
+  width: 400px;
+  height: 250px;
 }
 
 .prof-content {
@@ -294,6 +339,10 @@ h1{
   height: 100%;
   text-align: justify;
   font-size: 20px;
+}
+
+.quem-somos-content{
+  display: flex;
 }
 
 .item-center{
@@ -322,12 +371,24 @@ h1{
 }
 
 /* Parte do quem somos */
-#quemsomos {
-  background-color: white;
+#quem-somos {
+  background-color: #f4f4f4;
   margin-top: 30px;
   padding: 2%;
 }
-
+.qs{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin: 0;
+}
+ .qs p{
+  width: 80%;
+  margin: 0;
+  text-align: center;
+  font-size: 20px;
+ }
 .blue {
   color: #002841;
 }
@@ -365,6 +426,9 @@ h1{
 }
 
 @media(max-width: 700px) {
+  .qs p{
+    width: 100%;
+   }
   #chats img {
     height: 50px;
   }
@@ -393,5 +457,31 @@ h1{
   }
   .item-center{
     width: 300px;
+  }
+
+  .upper-header{
+    min-height: 30px;
+  }
+  .left-upper{
+    width: 197.5px;
+    height: 27.5px;
+    margin: 0px 10px;
+  }
+  .right-upper{
+    display: flex;
+    min-width: 17%;
+    justify-content: space-between;
+    margin: 0 30px;
+  }
+  .logo-dem{
+    width: 72.5px;
+    height: 27.5px;
+  }
+  .logo-prefeitura{
+    width: 30px;
+    height: 27.5px;
+  }
+  header{
+    margin-top: 30px;
   }
 }
