--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -108,6 +108,10 @@ h2 {
   align-items: center;
 }
 
+#inicio-content h2{
+  text-shadow: 1px 1px #ffffFF;
+}
+
 #mapa {
   display: flex;
   flex-direction: column;
@@ -116,7 +120,7 @@ h2 {
   background-color: #002841;
   font-size: 20px;
   background-image: url('../images/sala-de-aula.jpg');
-  background-position: ;
+  background-attachment: fixed;
   background-size: cover;
 }
 
@@ -309,7 +313,7 @@ h1{
 }
 
 .item {
-  width: 500px;
+  width: 550px;
   margin: 10px;
 }
 
@@ -326,9 +330,9 @@ h1{
 }
 
 .prof-content img {
-  margin-left: 20%;
-  width: 400px;
-  height: 250px;
+  margin-left: 10%;
+  width: 500px;
+  height: 300px;
 }
 
 .prof-content {
@@ -483,5 +487,8 @@ h1{
   }
   header{
     margin-top: 30px;
+  }
+  main{
+    margin-top: 90px;
   }
 }
