--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -36,7 +36,7 @@ body {
 .logo-dem{
   background-image: url('../images/logoDEM.png');
   background-size: cover;
-  width: 145px;
+  width: 135px;
   height: 55px;
 }
 .logo-prefeitura{
@@ -287,7 +287,7 @@ h2 {
   display: flex;
   max-width: 80%;
   text-align: justify;
-  font-size: 25px;
+  font-size: 20px;
 }
 
 #professores {
@@ -313,7 +313,7 @@ h1{
 }
 
 .item {
-  width: 550px;
+  width: 500px;
   margin: 10px;
 }
 
@@ -325,6 +325,7 @@ h1{
   display: flex;
   flex-direction: column;
   justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
   margin-top: 30px;
 }
@@ -343,21 +344,6 @@ h1{
   height: 100%;
   text-align: justify;
   font-size: 20px;
-}
-
-.quem-somos-content{
-  display: flex;
-}
-
-.item-center{
-  display: flex;
-  flex-direction: column;
-  width: 500px;
-  color: #fff;
-  height: 100%;
-  justify-content: center;
-  align-items: center;
-  margin: 30px;
 }
 
 .btn-p-main {
@@ -380,33 +366,71 @@ h1{
   margin-top: 30px;
   padding: 2%;
 }
-.qs{
-  width: 100%;
+.quem-somos-content{
   display: flex;
-  justify-content: center;
+  flex-direction: column;
+}
+.qs{
+  width: 750px;
+  display: flex;
+  justify-content: flex-start;
   align-items: center;
   margin: 0;
 }
  .qs p{
-  width: 80%;
-  margin: 0;
-  text-align: center;
+  margin: 10px 0;
+  text-align: justify;
   font-size: 20px;
  }
 .blue {
   color: #002841;
 }
-
-.item p {
-  margin: 30px;
+.group-list{
+  display: flex;
+  align-items: center;
+}
+.group-list .logo-dem, .group-list .logo-prefeitura{
+  height: 150px;
+}
+.group-list .logo-prefeitura{
+  width: 160px;
+}
+.group-list .logo-dem{
+  width: 360px;
+}
+.foto-card{
+  display: flex;
+  flex-direction: column;
+  height: 300px;
+  width: 200px;
+  justify-content: flex-end;
+  background-size: cover;
+}
+.card-content{
+  display: none;
+}
+.foto-card:hover > .card-content{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 60px;
+  background-color: #f3f3f3;
+  color: #000;
+}
+#priscila-eleuterio{
+  background-image: url('../images/priscila.jpeg');
+}
+.nome-card{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  background-color: #3C8F5D;
+  color: #f3f3f3;
+  height: 50px;
+  width: 100%;
 }
 
-.image-logo {
-  margin: 30px;
-}
-
-/* mentores */
-.mentores {
+.item p, .image-logo, .mentores {
   margin: 30px;
 }
 
@@ -478,7 +502,7 @@ h1{
     margin: 0 30px;
   }
   .logo-dem{
-    width: 72.5px;
+    width: 65.5px;
     height: 27.5px;
   }
   .logo-prefeitura{
