--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -1,3 +1,10 @@
+/*
+
+
+//TELA PRINCIPAL
+
+
+*/
 * {
   margin: 0;
   padding: 0;
@@ -51,15 +58,16 @@ body {
   margin-right: 25px;
 }
 
-header {
+.header-index {
   height: 60px;
   width: 100%;
   box-shadow: 5px -10px 30px #000;
   background-color: #f3f3f3;
   border-radius: 0px 0px 20px 20px;
-  margin-top: 60px;
   position: fixed;
-  top: 0;
+}
+.header-index{
+  margin-top: 60px;
 }
 
 header nav ul {
@@ -101,7 +109,7 @@ nav ul li a {
   justify-content: center;
 }
 
-main {
+.main-index {
   margin-top: 120px;
 }
 
@@ -362,7 +370,6 @@ h1{
   color: white;
   text-decoration: dashed;
   border-radius: 20px 20px 0 20px;
-
 }
 
 /* Parte do quem somos */
@@ -399,8 +406,6 @@ h1{
   display: flex;
   align-items: center;
   overflow-x: auto;
-  scrollbar-width: thin;
-  scrollbar-color: blue orange;
 }
 .group-list .logo-dem, .group-list .logo-prefeitura{
   height: 150px;
@@ -504,6 +509,93 @@ footer{
   margin: 10px;
 }
 
+/*
+
+
+//TELA DE LOGIN
+
+
+*/
+
+.header-login{
+  margin: 0;
+  background-color: #f4f4f4;
+  display: flex;
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 30px #000;
+  position: fixed;
+}
+.header-login .left-upper{
+  margin: 0px 20px;
+}
+.header-login .right-upper .logo-dem, .header-login .right-upper .logo-prefeitura{
+  margin: 0;
+}
+.header-login .right-upper{
+  margin-right: 30px;
+}
+.main-login{
+  margin-top: 0;
+  min-height: 100vh;
+  background-image: url('../images/sala-de-aula.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-login{
+  background-color: white;
+  max-width: 700px;
+  min-width: 70%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #002841;
+  border-radius: 30px;
+  box-shadow: #000 3px 3px 30px;
+}
+.form-login h2{
+  width: 100%;
+  height: 150px;
+  justify-content: center;
+  color: #002841;
+}
+.form-login .group-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.form-login label{
+  margin: 10px;
+}
+.form-login .input-login{
+  width: 280px;
+  height: 20px;
+}
+.form-login .button-submit{
+  display: flex;
+  height: 50px;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  border: 2px solid #002841;
+  border-radius: 10px;
+  background-color: #afbec7;
+  color: #002841;
+  font-size: 15px;
+  font-weight: 700;
+  transition: 0.2s;
+}
+.form-login .button-submit:hover{
+  background-color: #002841;
+  color: #f4f4f4;
+}
 @media(max-width: 1100px) {
   #bonequinho-container {
     display: none;
@@ -552,15 +644,14 @@ footer{
     min-height: 30px;
   }
   .left-upper{
-    width: 197.5px;
+    width: 187.5px;
     height: 27.5px;
-    margin: 0px 10px;
+    margin: 0; padding: 0;
   }
   .right-upper{
     display: flex;
-    min-width: 17%;
+    width: 25%;
     justify-content: space-between;
-    margin: 0 30px;
   }
   .logo-dem{
     width: 65.5px;
@@ -570,10 +661,10 @@ footer{
     width: 30px;
     height: 27.5px;
   }
-  header{
+  .header-index{
     margin-top: 30px;
   }
-  main{
+  .main-index{
     margin-top: 90px;
   }
   .quem-somos-content{
