--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -596,6 +596,94 @@ footer{
   background-color: #002841;
   color: #f4f4f4;
 }
+
+/* 
+
+
+TELA DE CADASTRO
+
+
+*/
+
+.header-cadastro{
+  margin: 0;
+  background-color: #f4f4f4;
+  display: flex;
+  height: 70px;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+  box-shadow: 0px 0px 30px #000;
+  position: fixed;
+}
+.header-cadastro .left-upper{
+  margin: 0px 20px;
+}
+.header-cadastro .right-upper .logo-dem, .header-cadastro .right-upper .logo-prefeitura{
+  margin: 0;
+}
+.header-cadastro .right-upper{
+  margin-right: 30px;
+}
+.main-cadastro{
+  margin-top: 0;
+  min-height: 100vh;
+  background-image: url('../images/sala-de-aula.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.form-cadastro{
+  background-color: white;
+  max-width: 700px;
+  min-width: 70%;
+  min-height: 400px;
+  display: flex;
+  flex-direction: column;
+  border: 1px solid #002841;
+  border-radius: 30px;
+  box-shadow: #000 3px 3px 30px;
+}
+.form-cadastro h2{
+  width: 100%;
+  height: 150px;
+  justify-content: center;
+  color: #002841;
+}
+.form-cadstro .group-form{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.form-cadastro label{
+  margin: 10px;
+}
+.form-cadastro .input-login{
+  width: 280px;
+  height: 20px;
+}
+.form-cadastro .button-submit{
+  display: flex;
+  height: 50px;
+  width: 100px;
+  justify-content: center;
+  align-items: center;
+  margin: 20px;
+  border: 2px solid #002841;
+  border-radius: 10px;
+  background-color: #afbec7;
+  color: #002841;
+  font-size: 15px;
+  font-weight: 700;
+  transition: 0.2s;
+}
+.form-cadastro .button-submit:hover{
+  background-color: #002841;
+  color: #f4f4f4;
+}
 @media(max-width: 1100px) {
   #bonequinho-container {
     display: none;
