--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -109,7 +109,9 @@ body::-webkit-scrollbar-thumb {
   justify-content: space-evenly;
   display: flex;
 }
-
+.menuAbrir{
+  display: flex;
+}
 header nav ul {
   display: flex;
   width: 100%;
@@ -523,7 +525,7 @@ h1 {
 }
 
 #demerson {
-  background-image: url("../images/sem-foto-homem.jpg");
+  background-image: url("../images/demerson.jpeg");
 }
 
 #felipe {
@@ -672,20 +674,15 @@ footer {
   border-radius: 10px;
 }
 
-.menuAbrir {
-  display: flex;
-  flex-direction: row;
-}
+nav .menuAbrir .sidebarAbrir{
 
-.menuAbrir i {
+  font-size: 25px;
+  padding: 5px;
+  cursor: pointer;
   display: none;
 }
 
-.sidebarAbrir {
-  cursor: pointer;
-  font-size: 25px;
-  padding: 5px;
-}
+
 
 .sidebarFechar {
   font-size: 24px;
@@ -953,12 +950,18 @@ TELA DE CADASTRO
 }
 
 @media (max-width: 940px) {
+  #nav{
+    width: 100%;
+    height: 100%;
+  }
   .header-index {
     justify-content: flex-start;
   }
-  .menuAbrir {
+  #menu{
     flex-direction: column;
-    padding-top: 30px;
+  }
+  .menuAbrir {
+    
   }
 
   .toggle {
@@ -966,7 +969,7 @@ TELA DE CADASTRO
   }
 
   nav.ativar .menuAbrir {
-    opacity: 0;
+    opacity: 1;
     transition: all 0.4s ease;
   }
 
@@ -1007,8 +1010,6 @@ TELA DE CADASTRO
     right: 0px;
     background-color: #9c9c9c;
     transition: 0.6s;
-    z-index: 1000;
-    height: 0px;
     visibility: hidden;
     overflow-y: hidden;
   }
@@ -1126,3 +1127,12 @@ TELA DE CADASTRO
   background-color: #002841;
   color: #f4f4f4;
 }
+
+nav .menuAbrir .logo a{
+  font-size: 17px;
+  text-decoration: none;
+  font-weight: 500;
+  color: #000;
+}
+
+
