--- a/assets/styles/telaMenu.css
+++ b/assets/styles/telaMenu.css
@@ -1,21 +1,31 @@
 .main-feed{
-    width: 100%;
-    height: 100vh;
+    min-width: 100%;
+    min-height: 100vh;
     display: flex;
     flex-direction: column;
     align-items: center;
-    justify-content: center;
+    margin-top: 60px;
     flex-wrap: wrap;
+    background-image: url(../images/sala-de-aula.jpg);
+    background-size: cover;
 }
 .main-feed h2{
     width: 95vw;
-    border-bottom: 2px solid #21683d;
+    color: #98FFA8;
+    border-bottom: 2px solid #98FFA8;
     margin: 25px;
+}
+.info-container{
+    width: 100vw;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 p{
     color: white;
+    text-align: justify;
     margin: 25px;
-    width: 600px;
+    width: 80vw;
 }
 .sessao{
     display: flex;
@@ -36,6 +46,7 @@ p{
 .sessao a{
     text-decoration: dashed;
     color: red;
+    margin: 20px;
 
 }
 
@@ -51,6 +62,7 @@ p{
     text-decoration: dashed;
     color: white;
     background-color: #3c8f5d;
+    border: #98FFA8 2px solid;
     border-radius: 10px;
     min-height: 50px;
     width: 250px;
